time slider added

--- a/project.html
+++ b/project.html
@@ -11,13 +11,17 @@
     <script src=sliders.js></script>
     <script src=powerSpectrumPlot2.js></script>
     <script src=label.js></script>
+    <script src="https://unpkg.com/d3-simple-slider"></script>
 </head>
 
 
 <body>
   <h2>Exercise 5 - Information Capacity</h2>
   <p><a href="index.html">[exercises]</a></p>
-
+  <div>
+    <h2 style="float: left">Time</h2>
+    <div id="slider-simple"></div>
+  </div>
 </body>
 <script>
 'use strict';
