sliders for x and y offsets added

--- a/project.html
+++ b/project.html
@@ -22,6 +22,14 @@
     <h2 style="float: left">Time</h2>
     <div id="slider-simple"></div>
   </div>
+  <div>
+    <h2 style="float: left">x-Offset</h2>
+    <div id="slider-x-offset"></div>
+  </div>
+  <div>
+    <h2 style="float: left">y-Offset</h2>
+    <div id="slider-y-offset"></div>
+  </div>
 </body>
 <script>
 'use strict';
